# cortecs-py

./: .gitignore  README.md  format.sh  pyproject.toml  requirements.txt
.github/workflows/: pre-deploy.yaml  release.yml  test.yaml
cortecs/: client.py
cortecs/crewai/: dedicated_crew_base.py
cortecs/langchain/: client.py  dedicated_llm.py  openai_promise.py
cortecs_py/: client.py  schemas.py
cortecs_py/integrations/langchain/: dedicated_llm.py
examples/: basic_example.py  dynamic_provision.py  dynamic_provision_langchain.py  reddit.py  requirements.txt  summarize.py  translate.py  translate_bible.py
examples/example_crew/: README.md  pyproject.toml
examples/example_crew/src/example_crew/: crew.py  main.py
