[tool.poetry]
name = "example_crew"
version = "0.1.0"
description = "example-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
example_crew = "example_crew.main:run"
run_crew = "example_crew.main:run"
train = "example_crew.main:train"
replay = "example_crew.main:replay"
test = "example_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
